--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-﻿discord==2.0.0
+async-generator==1.10
+async-timeout==3.0.1
+discord==2.0.0
 discord.py==2.0.1
-requests==2.26.0
+nest-asyncio==1.5.1
 Pillow==8.1.2
+requests==2.25.1
